packages/jsts/tests/dbd/benchmark/TypeError/T14 X is not iterable/T14-01/reproducer.js
const { WxCfg } = require('./reproducer-dep2.js')
WxCfg.init({ dir: __dirname}).start()
